--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -15,6 +15,7 @@
 	align-items: stretch;
 	z-index: 2;
 	position: relative;
+	flex-wrap: nowrap;
 }
 
 .container .filters .locations {
@@ -23,7 +24,7 @@
 }
 
 .container .filters .amenities {
-	width: 25%;
+    width: 25%;
 }
 
 .container .filters button {
