--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -12,3 +12,19 @@ header {
 	width: 100%;
 	border-bottom: 1px solid #CCCCCC;
 }
+
+header div#api_status {
+    height: 40px;
+    width: 40px;
+    background-color: #cccccc;
+    border-radius: 50%;
+    margin-top: 15px;
+    margin-left: auto;
+    margin-right: 30px;
+    display: block;
+    padding-top: auto;
+}
+
+header div.available {
+    background-color: #ff545f;
+}
