--- a/web_dynamic/static/styles/8-places.css
+++ b/web_dynamic/static/styles/8-places.css
@@ -52,7 +52,7 @@
 	border-radius: 50%;
 	min-width: 60px;
 	height: 60px;
-	font-size: 30px;
+	font-size: 25px;
 	text-align: center;
 	line-height: 60px;
 }
@@ -79,6 +79,21 @@
 
 .container .places .user {
 	margin: 20px 0 5px 0;
+}
+
+.container .places .reviews {
+    height: auto;
+    border-bottom: 1px: solid #DDDDDD;
+    border-bottom: 1px: solid #DDDDDD;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.container .places .reviewText {
+    display: flex;
+    justify-content: flex-start;
+    flex-flow: row wrap;
 }
 
 @media screen and (max-width: 600px) {
